--- a/modulo1/projeto-portfólio/index.html
+++ b/modulo1/projeto-portfólio/index.html
@@ -13,11 +13,30 @@
 
 <body>
     <h1>
-        meu nome é: FERNANDO, tenho28 anos, sou formado em direito  
+        meu nome é: FERNANDO
     </h1>
-<table>
+
+    <p>
+        sou formado em direito</p <h3>
+    meus cursos:
+    </h3>
+    <ul>
+        <li>assistente adiministrativo</li>
+        <li>informática</li>
+        <liassistente de recursos humanos <li>pit-sot liderança</li>
+
+    </ul>
+    <h3>
+meus empregos        
+    </h3>
+    <ol>
+        <li>estajiário da prefeitura de TAUBATÉ</li>
+        <li>trainee</li>
+        <li>programador</li>
+    </ol>
+
     
-</table>
+
 </body>
 
 </html>!
