--- a/modulo1/labetub-css/CSS-Labetub.html
+++ b/modulo1/labetub-css/CSS-Labetub.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -19,54 +19,57 @@
         <button>Pesquisar</button>
     </header>
 
-    <main>
+    <main>;</main>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/1.mp4">Click aqui para reproduzir o primeiro
-                vídeo</a>
-        </setion>
+    <setion>
+        <video width="320" height="240" controls="controls" autoplay="autoplay">
+            <source src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" type="video/mp4" />
+        </video>
+    </setion>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/2.mp4">Click aqui para reproduzir o segundo
-                vídeo</a>
-        </setion>
+    <setion>
+        <a href="https://storage.googleapis.com/future-apis.appspot.com/2.mp4">Click aqui para reproduzir o segundo
+            vídeo</a>
+    </setion>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/3.mp4">Click aqui para reproduzir o terceiro
-                vídeo</a>
-        </setion>
+    <setion>
+        <a href="https://storage.googleapis.com/future-apis.appspot.com/3.mp4">Click aqui para reproduzir o terceiro
+            vídeo</a>
+    </setion>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/4.mp4">Click aqui para reproduzir o quarto
-                vídeo</a>
-        </setion>
+    <setion>
+        <a href="https://storage.googleapis.com/future-apis.appspot.com/4.mp4">Click aqui para reproduzir o quarto
+            vídeo</a>
+    </setion>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/5.mp4">Click aqui para reproduzir o quinto
-                vídeo</a>
-        </setion>
+    <setion>
+        <a href="https://storage.googleapis.com/future-apis.appspot.com/5.mp4">Click aqui para reproduzir o quinto
+            vídeo</a>
+    </setion>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/6.mp4">Click aqui para reproduzir o sexto
-                vídeo</a>
-        </setion>
+    <setion>
+        <a href="https://storage.googleapis.com/future-apis.appspot.com/6.mp4">Click aqui para reproduzir o sexto
+            vídeo</a>
+    </setion>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/7.mp4">Click aqui para reproduzir o sétimo
-                vídeo</a>
-        </setion>
+    <setion>
+        <a href="https://storage.googleapis.com/future-apis.appspot.com/7.mp4">Click aqui para reproduzir o sétimo
+            vídeo</a>
+    </setion>
 
-        <setion>
-            <a href="https://storage.googleapis.com/future-apis.appspot.com/8.mp4">Click aqui para reproduzir o Oitavo
-                Vídeo</a>
-        </setion>
+    <setion>
+        <a href="https://storage.googleapis.com/future-apis.appspot.com/8.mp4">Click aqui para reproduzir o Oitavo
+            Vídeo</a>
+    </setion>
 
     </main>
 
     <footer>
 
-    </footer>
+        <a href="https://www.linkedin.com/in/fernando-aparecido-32963b1b1"> </a>
 
-    </ody>
+        </footer>
+
+</body>
 
 </html>
